--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
         </div>
         <div class="aboutText">
           <!--Images-->
-          <a href="Images/arduino.PNG">
-            <img src="Images/arduino.PNG" alt="Bordes Image" width="50%">
+          <a href="Images/arduino.png">
+            <img src="Images/arduino.png" alt="arduino Image" width="50%">
           </a>
         </div>
       </div>
